FIX: quicksearch jumping out when between 1400/1600 page width

--- a/static/home/css/style.css
+++ b/static/home/css/style.css
@@ -9,7 +9,7 @@ h4 {
 /* Allow wider menu bar for smaller screens */
 @media (max-width: 1600px) {
   .navbar .container {
-    width: 90vw;
+    width: 95vw;
   }
 }
 
